--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -19,8 +19,8 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
 
     {{!DataTable  default}}
-    <link rel="stylesheet" href="/stylesheets/dataTables.dataTables.min.css">
-    
+    <link rel="stylesheet" href="/stylesheets/dataTables.dataTables.min.css" />
+
     {{!jQuery}}
     <script
       src="https://code.jquery.com/jquery-3.7.1.js"
@@ -29,35 +29,33 @@
     ></script>
     {{!jsPDF}}
     <script src="/javascripts/cdn/jspdf.umd.min.js"></script>
-  
+
     <script src="/javascripts/cdn/purify.min.js"></script>
 
     <script src="/javascripts/cdn/html2canvas.min.js"></script>
 
   </head>
   <script>
-    $(document).ready( function () { $('#myTable').DataTable({
-      "language":{
-        "url":"//cdn.datatables.net/plug-ins/2.0.0/i18n/es-ES.json"
-      }
-    }); } );
+    $(document).ready( function () { $('#myTable').DataTable({ "language":{
+    "url":"//cdn.datatables.net/plug-ins/2.0.0/i18n/es-ES.json" } }); } );
   </script>
   <body>
     {{{body}}}
 
-   
-   {{!Bootstrap JS}}
+    {{!Bootstrap JS}}
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-   {{!DataTable js default}}
-   <script src="/javascripts/cdn/dataTables.min.js"></script>
-    
-  {{!generarPDF.js}}
-  <script src="/javascripts/generarPDF.js"></script>
-  {{!alertas.js}}
-  <script src="/javascripts/alertas.js"></script>
+    {{!DataTable js default}}
+    <script src="/javascripts/cdn/dataTables.min.js"></script>
+
+    {{!generarPDF.js}}
+    <script src="/javascripts/generarPDF.js"></script>
+    {{!alertas.js}}
+    <script src="/javascripts/alertas.js"></script>
+    {{!firma.js}}
+    <script src="/javascripts/firma.js"></script>
 
   </body>
 </html>
