--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -1,4 +1,3 @@
-
 <div class="card">
   <div class="card-header text-bg-secondary p-2">
     <h3>Folio: {{reporte.id}}</h3>
@@ -13,7 +12,7 @@
           name="fecha"
           value="{{reporte.fecha}}"
           id="fecha"
-          aria-label="Disabled input example" 
+          aria-label="Disabled input example"
           disabled
         />
       </div>
@@ -113,12 +112,41 @@
 
       <div class="mb-3" id="dBtnEnviar">
         <a href="/" class="btn btn-secondary">Regresar</a>
-        <button type="submit" class="btn btn-primary" onclick="handleReload()">Actualizar</button>
+        <button
+          type="submit"
+          class="btn btn-primary"
+          onclick="handleReload()"
+        >Actualizar</button>
       </div>
     </form>
-    <button class="btn btn-danger mb-5" onclick="generatePDF()"><i class="bi bi-filetype-pdf">Exportar PDF</i></button>
+    <div class="row">
+      {{!-PENDIENTE FIRMA}}
+      {{!-- <div class="col-md-6">
+        <canvas id="signCanva" width="620" height="160">
+          Firma Evidencia
+        </canvas>
+        <div class="mt-2">
+          <button class="btn btn-primary" id="submitBtn">Añadir firma</button>
+          <button class="btn btn-secondary" id="clearBtn">Limpiar</button>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <img id="preSign" src="" alt="Firma obtenida!" />
+      </div>
+    </div> --}}
+    <div class="col-3">
+      <button class="btn btn-danger mb-5 mt-1" onclick="generatePDF()"><i
+        class="bi bi-filetype-pdf"
+      >Exportar PDF</i></button>
+    </div>
     
-    <div id="alerta" class="alert alert-success alert-dismissible fade show" role="alert" style="display: none;">
+
+    <div
+      id="alerta"
+      class="alert alert-success alert-dismissible fade show"
+      role="alert"
+      style="display: none;"
+    >
       <strong>¡Actualizado con éxito!</strong>
     </div>
   </div>
