--- a/views/reportes/newReporte.hbs
+++ b/views/reportes/newReporte.hbs
@@ -1,16 +1,6 @@
 <div class="card">
   <div class="card-body">
     <form action="/add" method="post">
-    {{!-- <div class="input-group mb-3">
-        <label for="fecha" class="input-group-text">FECHA Y HORA</label>
-        <input
-          type="text"
-          class="form-control"
-          name="fecha"
-          id="fecha"
-          required
-        />
-      </div> --}}
       <div class="input-group mb-3">
         <label for="adscripcion" class="input-group-text">ADSCRIPCION</label>
         <input
@@ -23,7 +13,7 @@
       </div>
       <div class="input-group mb-3">
         <label for="usuario" class="input-group-text">USUARIO</label>
-        <input type="text" class="form-control" name="usuario" required/>
+        <input type="text" class="form-control" name="usuario" required />
       </div>
       <div class="input-group mb-3">
         <label for="problema" class="input-group-text">PROBLEMA</label>
@@ -55,17 +45,24 @@
           required
         >
           <option disabled selected>Selecciona un nombre</option>
-          <option value="LILIA FABIOLA MONTES CAMPOS">LILIA FABIOLA MONTES CAMPOS</option>
-          <option value="JOSE DE JESUS RAMIREZ BOCANEGRA">JOSE DE JESUS RAMIREZ BOCANEGRA</option>
+          <option value="LILIA FABIOLA MONTES CAMPOS">LILIA FABIOLA MONTES
+            CAMPOS</option>
+          <option value="JOSE DE JESUS RAMIREZ BOCANEGRA">JOSE DE JESUS RAMIREZ
+            BOCANEGRA</option>
           <option value="FERNANDO RAMIREZ BOCANEGRA">FERNANDO RAMIREZ BOCANEGRA</option>
           <option value="LEONARDO SANCHEZ CABRERA">LEONARDO SANCHEZ CABRERA</option>
-          <option value="JOSE RODOLFO RESENDIZ HERRERA">JOSE RODOLFO RESENDIZ HERRERA</option>
-          <option value="VICTOR HUGO GONZALEZ VILLEGAS">VICTOR HUGO GONZALEZ VILLEGAS</option>
-          <option value="JOSE DE JESUS REYES CASTAÑOL">JOSE DE JESUS REYES CASTAÑOL</option>
+          <option value="JOSE RODOLFO RESENDIZ HERRERA">JOSE RODOLFO RESENDIZ
+            HERRERA</option>
+          <option value="VICTOR HUGO GONZALEZ VILLEGAS">VICTOR HUGO GONZALEZ
+            VILLEGAS</option>
+          <option value="JOSE DE JESUS REYES CASTAÑOL">JOSE DE JESUS REYES
+            CASTAÑOL</option>
           <option value="ARTURO MENDEZ VAZQUEZ">ARTURO MENDEZ VAZQUEZ</option>
           <option value="ARTURO CORONA BELTRAN">ARTURO CORONA BELTRAN</option>
-          <option value="LUIS FERNANDO BARCENAS JIMENEZ">LUIS FERNANDO BARCENAS JIMENEZ</option>
-          <option value="EDGAR IGNACIO GARCIA AVILES">EDGAR IGNACIO GARCIA AVILES</option>
+          <option value="LUIS FERNANDO BARCENAS JIMENEZ">LUIS FERNANDO BARCENAS
+            JIMENEZ</option>
+          <option value="EDGAR IGNACIO GARCIA AVILES">EDGAR IGNACIO GARCIA
+            AVILES</option>
         </select>
       </div>
       <div class="input-group mb-3">
@@ -83,7 +80,7 @@
           <option value="PENDIENTE">PENDIENTE</option>
         </select>
       </div>
-      
+
       <div class="mb-3" id="dBtnEnviar">
         <a href="/" class="btn btn-secondary">Regresar</a>
         <button type="submit" class="btn btn-primary">Enviar</button>
