Se añade imagen en método actualizar

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -55,7 +55,7 @@
     {{!alertas.js}}
     <script src="/javascripts/alertas.js"></script>
     {{!firma.js}}
-    <script src="/javascripts/firma.js"></script>
+    {{!-- <script src="/javascripts/firma.js"></script> --}}
 
   </body>
 </html>
