--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -3,7 +3,7 @@
     <h3>Folio: {{reporte.id}}</h3>
   </div>
   <div class="card-body">
-    <form action="/edit/{{reporte.id}}" method="post">
+    <form action="/edit/{{reporte.id}}" method="post" enctype="multipart/form-data">
       <div class="input-group mb-3">
         <label for="fecha" class="input-group-text">FECHA Y HORA</label>
         <input
@@ -109,6 +109,9 @@
           <option value="PENDIENTE">PENDIENTE</option>
         </select>
       </div>
+      <div class="input-group mb-3">
+        <input class="form-control" type="file" name="evidencia" id="evidenciaInput">
+      </div>
 
       <div class="mb-3" id="dBtnEnviar">
         <a href="/" class="btn btn-secondary">Regresar</a>
@@ -120,6 +123,7 @@
       </div>
     </form>
     <div class="row">
+      <img src="/images/evidencias/{{reporte.evidencia}}" alt="Imagen de evidencia" class="img-fluid">
       {{!-PENDIENTE FIRMA}}
       {{!-- <div class="col-md-6">
         <canvas id="signCanva" width="620" height="160">
@@ -132,14 +136,14 @@
       </div>
       <div class="col-md-4">
         <img id="preSign" src="" alt="Firma obtenida!" />
+      </div>--}}
+     
+    </div> 
+      <div class="col-3">
+        <button class="btn btn-danger mb-5 mt-1" onclick="generatePDF()"><i
+          class="bi bi-filetype-pdf"
+        >Exportar PDF</i></button>
       </div>
-    </div> --}}
-    <div class="col-3">
-      <button class="btn btn-danger mb-5 mt-1" onclick="generatePDF()"><i
-        class="bi bi-filetype-pdf"
-      >Exportar PDF</i></button>
-    </div>
-    
 
     <div
       id="alerta"
