ajustes de código

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -19,4 +19,8 @@ body{
     border: 2px dotted #CCCCCC;
     border-radius: 15px;
     cursor: crosshair;
-  }
+}
+#imgEvidencia{
+    width:520;
+    height: 280;
+}
