--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -123,7 +123,7 @@
       </div>
     </form>
     <div class="row">
-      <img src="/images/evidencias/{{reporte.evidencia}}" alt="Imagen de evidencia" class="img-fluid">
+      <img src="/images/evidencias/{{reporte.evidencia}}" alt="Imagen de evidencia" class="img-fluid" id="imgEvidencia">
       {{!-PENDIENTE FIRMA}}
       {{!-- <div class="col-md-6">
         <canvas id="signCanva" width="620" height="160">
