--- a/views/reportes/newReporte.hbs
+++ b/views/reportes/newReporte.hbs
@@ -37,6 +37,16 @@
       </div>
       <div class="input-group mb-3">
         <label for="atendio" class="input-group-text">ATENDIO</label>
+        <input
+          type="text"
+          class="form-control"
+          value="{{nombre}}"
+          name="atendio"
+          id="atendio"
+        />
+      </div>
+      {{! <div class="input-group mb-3">
+        <label for="atendio" class="input-group-text">ATENDIO</label>
         <select
           class="form-select"
           name="atendio"
@@ -64,7 +74,7 @@
           <option value="EDGAR IGNACIO GARCIA AVILES">EDGAR IGNACIO GARCIA
             AVILES</option>
         </select>
-      </div>
+      </div> }}
       <div class="input-group mb-3">
         <label for="estado" class="input-group-text">STATUS</label>
         <select
@@ -82,7 +92,8 @@
       </div>
 
       <div class="mb-3" id="dBtnEnviar">
-        <a href="/" class="btn btn-secondary">Regresar</a>
+        <a href="/menu" class="btn btn-secondary">Volver al menú</a>
+        <a href="/reportes" class="btn btn-secondary">Regresar</a>
         <button type="submit" class="btn btn-primary">Enviar</button>
       </div>
     </form>
