--- a/views/reportes/reportes.hbs
+++ b/views/reportes/reportes.hbs
@@ -6,6 +6,7 @@
             <i class="bi bi-plus-lg"></i>
             Nuevo reporte
         </a>
+        <a href="/menu" class="btn btn-secondary">Volver al menú</a>
     </div>
 </div>
 
@@ -52,5 +53,3 @@
         {{/if}}
     </div>
 </div>
-
-
