--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,18 +5,14 @@
     <link rel="icon" href="/images/icon.ico" type="image/x-icon" />
     <title>Informatización Reportes</title>
     {{!Bootstrap}}
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
+    <link rel="stylesheet" href="/stylesheets/styles.css"/> 
     {{!Bootsrap Icons}}
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    {{!css}}
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    {{!Css}}
+    <link rel="stylesheet" href="/stylesheets/style.css">
 
     {{!DataTable  default}}
     <link rel="stylesheet" href="/stylesheets/dataTables.dataTables.min.css" />
@@ -44,9 +40,7 @@
 
     {{!Bootstrap JS}}
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
+      src="/javascripts/cdn/bootstrap.min.js"></script>
     {{!DataTable js default}}
     <script src="/javascripts/cdn/dataTables.min.js"></script>
 
