--- a/views/principal/menu.hbs
+++ b/views/principal/menu.hbs
@@ -1,11 +1,14 @@
-<div class="container-fluid">
-  <h1>{{nombre}}</h1>
-  <div class="">
-    <a href="/logout" class="btn btn-danger">Cerrar sesión</a>
+<nav class="card navbar bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white">{{nombre}}</a>
+    <div class="d-flex" >
+      <a href="/logout" class="btn btn-danger"><i class="bi bi-box-arrow-right"></i></a>
+    </div>
   </div>
-</div>
+</nav>
 
-<div class="container-fluid">
+
+<div class="container-fluid mt-5">
   <div class="container text-center">
     <div class="row">
       <div class="col">
