--- a/views/reportes/error.hbs
+++ b/views/reportes/error.hbs
@@ -7,7 +7,7 @@
         <hr />
         <p class="mb-0">Por favor, intenta nuevamente más tarde.</p>
         <hr />
-        <a href="/" class="btn btn-danger">Regresar a inicio</a>
+        <a href="/menu" class="btn btn-danger">Regresar a inicio</a>
       </div>
     </div>
   </div>
