--- a/views/reportes/newReporte.hbs
+++ b/views/reportes/newReporte.hbs
@@ -1,22 +1,22 @@
-<div class="card">
-  <div class="card-body">
+<div class="card bg-info mt-5">
+  <div class="card-body bg-info">
     <form action="/add" method="post">
       <div class="input-group mb-3">
-        <label for="adscripcion" class="input-group-text">ADSCRIPCION</label>
+        <label for="adscripcion" class="input-group-text bg-secondary">ADSCRIPCION /<br> FACULTAD</label>
         <input
           type="text"
-          class="form-control"
+          class="form-control "
           name="adscripcion"
           id="adscripcion"
           required
         />
       </div>
       <div class="input-group mb-3">
-        <label for="usuario" class="input-group-text">USUARIO</label>
+        <label for="usuario" class="input-group-text bg-secondary">USUARIO</label>
         <input type="text" class="form-control" name="usuario" required />
       </div>
       <div class="input-group mb-3">
-        <label for="problema" class="input-group-text">PROBLEMA</label>
+        <label for="problema" class="input-group-text bg-secondary">PROBLEMA</label>
         <textarea
           class="form-control"
           name="problema"
@@ -26,7 +26,7 @@
         ></textarea>
       </div>
       <div class="input-group mb-3">
-        <label for="solucion" class="input-group-text">SOLUCION</label>
+        <label for="solucion" class="input-group-text bg-secondary">DIAGNOSTICO /<br> SOLUCION</label>
         <textarea
           class="form-control"
           name="solucion"
@@ -36,7 +36,7 @@
         ></textarea>
       </div>
       <div class="input-group mb-3">
-        <label for="atendio" class="input-group-text">ATENDIO</label>
+        <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
         <input
           type="text"
           class="form-control"
@@ -46,7 +46,7 @@
         />
       </div>
       {{! <div class="input-group mb-3">
-        <label for="atendio" class="input-group-text">ATENDIO</label>
+        <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
         <select
           class="form-select"
           name="atendio"
@@ -76,7 +76,7 @@
         </select>
       </div> }}
       <div class="input-group mb-3">
-        <label for="estado" class="input-group-text">STATUS</label>
+        <label for="estado" class="input-group-text bg-secondary">STATUS</label>
         <select
           class="form-select"
           name="estado"
@@ -91,11 +91,14 @@
         </select>
       </div>
 
-      <div class="mb-3" id="dBtnEnviar">
-        <a href="/menu" class="btn btn-secondary">Volver al menú</a>
-        <a href="/reportes" class="btn btn-secondary">Regresar</a>
-        <button type="submit" class="btn btn-primary">Enviar</button>
+      <div class="d-flex justify-content-center m-2" id="dBtnEnviar">
+        <a href="/menu" class="btn btn-primary m-2">Volver al menú</a>
+        <button type="submit" class="btn btn-primary m-2">Enviar</button>
       </div>
     </form>
+    <hr style="color: #ffffff;">
+    <div class="d-flex justify-content-center">
+      <img class="container-fluid" style="width: 45%;" src="/images/logos.png">
+    </div>
   </div>
 </div>
