--- a/views/reportes/reportes.hbs
+++ b/views/reportes/reportes.hbs
@@ -1,55 +1,66 @@
-
-<div class="container-fluid">
-    {{!-- Button trigger modal  --}}
-    <div class="mb-4 mt-3" id="dBtn">
+<nav class="card navbar bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand text-white">{{nombre}}</a>
+    <div class="d-flex justify-content-end" >
+      <a href="/menu" class="btn btn-primary">Volver al menú</a>
         <a href="/add" class="btn btn-primary">
             <i class="bi bi-plus-lg"></i>
-            Nuevo reporte
+            Nuevo 
         </a>
-        <a href="/menu" class="btn btn-secondary">Volver al menú</a>
     </div>
-</div>
+  </div>
+</nav>
 
-<div class="container-fluid">
-    <div class="mt-5">
-        {{#if reportes}}
-        <table class="table table-hover" id="myTable">
-            <thead>
-                <tr>
-                    <th scope="col">FECHA Y HORA</th>
-                    <th scope="col">ADSCRIPCION</th>
-                    <th scope="col">USUARIO</th>
-                    <th scope="col">PROBLEMA</th>
-                    <th scope="col">SOLUCION</th>
-                    <th scope="col">ATENDIO</th>
-                    <th scope="col">STATUS</th>
-                    <th scope="col">EDITAR</th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each reportes}}
-                <tr class="{{#ifEquals estado 'ATENDIDO'}} table-success {{else ifEquals estado 'PROCESO'}} table-warning {{else}} table-secondary {{/ifEquals}}">
-                    <td>{{fecha }}</td>
-                    <td>{{adscripcion}}</td>
-                    <td>{{usuario}}</td>
-                    <td>{{problema}}</td>
-                    <td>{{solucion}}</td>
-                    <td>{{atendio}}</td>
-                    <td>{{estado}}</td>
-                    <td><a href="edit/{{id}}" class="btn btn-warning"><i class="bi bi-pencil-fill"></i></a></td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
-        {{else}}
-        <div class="card text-center mx-auto" style="width: 350px;">
-            <div class="card-header">
-                <h3>No hay reportes para mostrar</h3>
-            </div>
-            <div class="card-body">
-                <p>Crea uno haciendo clic en Nuevo reporte</p>
+
+<div class="card bg-info text-white">
+    <div class="card-body">
+        <div class="container-fluid">
+            <div class="mt-5">
+                {{#if reportes}}
+                <table class="table table-hover" id="myTable">
+                    <thead>
+                        <tr>
+                            <th scope="col">FECHA Y HORA</th>
+                            <th scope="col">ADSCRIPCION</th>
+                            <th scope="col">USUARIO</th>
+                            <th scope="col">PROBLEMA</th>
+                            <th scope="col">SOLUCION</th>
+                            <th scope="col">ATENDIO</th>
+                            <th scope="col">STATUS</th>
+                            <th scope="col">EDITAR</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {{#each reportes}}
+                        <tr
+                            class="{{#ifEquals estado 'ATENDIDO'}} table-success {{else ifEquals estado 'PROCESO'}} table-warning {{else}} table-secondary {{/ifEquals}}">
+                            <td>{{fecha }}</td>
+                            <td>{{adscripcion}}</td>
+                            <td>{{usuario}}</td>
+                            <td>{{problema}}</td>
+                            <td>{{solucion}}</td>
+                            <td>{{atendio}}</td>
+                            <td>{{estado}}</td>
+                            <td><a href="edit/{{id}}" class="btn btn-primary"><i class="bi bi-pencil-fill"></i></a></td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+                {{else}}
+                <div class="card text-center mx-auto" style="width: 350px;">
+                    <div class="card-header">
+                        <h3>No hay reportes para mostrar</h3>
+                    </div>
+                    <div class="card-body">
+                        <p>Crea uno haciendo clic en Nuevo reporte</p>
+                    </div>
+                </div>
+                {{/if}}
             </div>
         </div>
-        {{/if}}
+        <hr style="color: #ffffff;">
+        <div class="d-flex justify-content-center">
+            <img class="container-fluid" style="width: 45%;" src="/images/logos.png">
+        </div>
     </div>
 </div>
