Ajustes de queries

--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -58,13 +58,13 @@
           required
         >{{reporte.solucion}}</textarea>
       </div>
-      <div class="input-group mb-3">
+      <div class="input-group mb-3" id="campoUser">
         <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
         <input
           type="text"
           class="form-control"
-          value="{{reporte.atendio}}"
-          name="atendio"
+          value="{{reporte.id_atendio}}"
+          name="id_atendio"
           id="atendio"
         />
       </div>
