--- a/views/reportes/newReporte.hbs
+++ b/views/reportes/newReporte.hbs
@@ -35,13 +35,13 @@
           required
         ></textarea>
       </div>
-      <div class="input-group mb-3">
+      <div class="input-group mb-3" id="campoUser">
         <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
         <input
-          type="text"
+          type="number"
           class="form-control"
-          value="{{nombre}}"
-          name="atendio"
+          value="{{id}}"
+          name="id_atendio"
           id="atendio"
         />
       </div>
