--- a/views/reportes/reportes.hbs
+++ b/views/reportes/reportes.hbs
@@ -39,7 +39,7 @@
                             <td>{{usuario}}</td>
                             <td>{{problema}}</td>
                             <td>{{solucion}}</td>
-                            <td>{{atendio}}</td>
+                            <td>{{nombre}}</td>
                             <td>{{estado}}</td>
                             <td><a href="edit/{{id}}" class="btn btn-primary"><i class="bi bi-pencil-fill"></i></a></td>
                         </tr>
@@ -47,7 +47,7 @@
                     </tbody>
                 </table>
                 {{else}}
-                <div class="card text-center mx-auto" style="width: 350px;">
+                <div class="card text-center mx-auto bg-info text-white" style="width: 350px;">
                     <div class="card-header">
                         <h3>No hay reportes para mostrar</h3>
                     </div>
