--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -63,7 +63,7 @@
         <input
           type="text"
           class="form-control"
-          value="{{reporte.id_atendio}}"
+          value="{{reporte.nombre}}"
           name="id_atendio"
           id="atendio"
         />
