Correción id_atendio en método editar

--- a/views/reportes/editReporte.hbs
+++ b/views/reportes/editReporte.hbs
@@ -59,11 +59,17 @@
         >{{reporte.solucion}}</textarea>
       </div>
       <div class="input-group mb-3" id="campoUser">
-        <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
         <input
           type="text"
           class="form-control"
           value="{{reporte.nombre}}"
+          id="nombre"
+        />
+        <label for="atendio" class="input-group-text bg-secondary">ATENDIO</label>
+        <input
+          type="text"
+          class="form-control"
+          value="{{reporte.id_atendio}}"
           name="id_atendio"
           id="atendio"
         />
