Pantalla Login responsiva

--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -1,45 +1,39 @@
-<div class="mb-5 ps-3">
-        <img class="container-fluid" src="/images/logos.png" style="width: 600px;">
-    </div>
-<div class="container mt-2">
-
+<div class="container-fluid container mb-3 pe-5">
+  <div class="flex-row justify-content-start">
+    <img class="img-fluid" src="/images/logos.png" />
+  </div>
+</div>
+<div class="container">
     <div class="row">
-        <div class="col-6 mt-5">
-
-            <div class="mb-5">
-                <h1 id="titleL">
-                    INICIO DE
-                </h1>
-                <h1 id="titleL2">
-                    SESIÓN
-                </h1>
-            </div>        
-
-            <form action="/login" method="post" id="formLogin">
-            <div class="input-group mb-3">
-                <input type="email" class="form-control" name="correo" placeholder="Correo" required>
+        <div class="col-md-7">
+            <div class="text-center">
+                <h1 class="display-1" id="titleL">INICIO DE</h1>
+                <h1 class="display-1" id="titleL2">SESIÓN</h1>
+                <form action="/login" method="post" id="formLogin">
+                    <div class="input-group mb-3">
+                        <input type="email" class="form-control" name="correo" placeholder="Correo" required />
+                    </div>
+                    <div class="input-group mb-3">
+                        <input type="password" class="form-control" name="clave" placeholder="Clave" required />
+                    </div>
+                    <div class="input-group mb-3">
+                        <button type="submit" class="btn btn-primary btnColor">Iniciar sesión</button>
+                    </div>
+                </form>
             </div>
-            <div class="input-group mb-3">
-                <input type="password" class="form-control" name="clave" placeholder="Clave" required>
-            </div>
-            <div class="input-group mb-3">
-                <button type="submit" class="btn btn-primary btnColor">Iniciar sesión</button>
-            </div>    
-            </form>
         </div>
-        <div class="col-1"></div>
-        <div class="container col-5 ps-5">
-            <img src="/images/inicio.png" class="img-fluid" style="width: 700px;">
+        <div class="col-md-5 container">
+            <div class="d-flex container justify-content-center align-items-center h-100">
+                <img src="/images/inicio.png" class="img-fluid"/>
+            </div>
         </div>
     </div>
-    
-    
+</div>
 </div>
 
 {{!Alerta contraseña o correo incorrectos}}
 {{#if message}}
-    <script>
-        alert('{{message}}');
-    </script>
-{{/if}} 
-
+  <script>
+    alert('{{message}}');
+  </script>
+{{/if}}
