--- a/views/principal/menu.hbs
+++ b/views/principal/menu.hbs
@@ -18,7 +18,7 @@
         <a href="/add" class="btn btn-primary">Nuevo reporte</a>
       </div>
       <div class="col">
-        <a href="#" class="btn btn-primary disabled" aria-disabled="true">Mis reportes</a>
+        <a href="/misReportes" class="btn btn-primary">Mis reportes</a>
       </div>
     </div>
   </div>
