--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,8 +7,8 @@
     <div class="row">
         <div class="col-md-7">
             <div class="text-center">
-                <h1 class="display-1" id="titleL">INICIO DE</h1>
-                <h1 class="display-1" id="titleL2">SESIÓN</h1>
+                <h1 class="display-1" id="titleL">SISTEMA CONTROL</h1>
+                <h1 class="display-1" id="titleL2">DE REPORTES</h1>
                 <form action="/login" method="post" id="formLogin">
                     <div class="input-group mb-3">
                         <input type="email" class="form-control" name="correo" placeholder="Correo" required />
